[project]
name = "feature-flag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0.47",
]

[project.optional-dependencies]
cli = ["click>=8.3.1"]
api = ["fastapi[standard]>=0.134.0"]
all = ["click>=8.3.1", "fastapi[standard]>=0.134.0"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
